Se agrego nueva imagen de fondo y se cambio la imagen en construcción.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <body>
     <div><h2>Eventos Plaza</h2></div>
     <div align=center>
-      <img aling="center" src="image/construccion.jpg">
+      <img aling="center" src="image/índice.jpeg">
     </div>
+    <div align=center>
+      <img aling="center" src="image/construccion2.jpg">
+    </div>
+
   </body>
 </html>
