Se agrego icono con acceso a redes sociales y Contactos.

--- a/index.html
+++ b/index.html
@@ -12,5 +12,27 @@
       <img aling="center" src="image/construccion2.jpg">
     </div>
 
+
+
+    <div align=center>
+      <a href="https://www.facebook.com/eventosplazag" target="_blank" class="site-footer__social-networks__label">
+        <img class=" lazyloaded" data-src="" alt="Facebook" src="image/facebook.png">
+      </a>
+      <a href="https://www.instagram.com/eventosplaza2016/" target="_blank" class="site-footer__social-networks__label">
+        <img class=" lazyloaded" data-src="" alt="Instagram" src="image/instagram.png"></a>
+      </a>
+      <a href="https://twitter.com/eventosplazag" target="_blank" class="site-footer__social-networks__label">
+          <img class=" lazyloaded" data-src="" alt="Twitter" src="image/twitter.png">
+      </a>
+    </div>
+
+    <div align=center>
+      <strong>Teléfon de contacto:</strong>+34 639177061<br>
+      <strong>E-mail:</strong> <a href="mailto:eventosplaza2016@gmail.com">eventosplaza2016@gmail.com</a>
+    </div>
+
+
+
+
   </body>
 </html>
