Se corrigió la etiqueta teléfono.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <div align=center>
-      <strong>Teléfon de contacto:</strong>+34 639177061<br>
+      <strong>Teléfono de contacto:</strong>+34 639177061<br>
       <strong>E-mail:</strong> <a href="mailto:eventosplaza2016@gmail.com">eventosplaza2016@gmail.com</a>
     </div>
 
