Inclusión de: Próxima apertura y dirección. Cambio de la carpeta images

--- a/index.html
+++ b/index.html
@@ -1,34 +1,43 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8"/>
-    <title>Eventos Plaza</title>
+    <title>Eventos Plaza - Tu sueño hecho fiesta.</title>
   </head>
   <body>
-    <div><h2>Eventos Plaza</h2></div>
+    <div>
+    
+    
     <div align=center>
-      <img aling="center" src="image/índice.jpeg">
+    <img src="images/apertura.png" alt="imagen apertura">    
+    <img src="images/eventos_plaza.png" alt="imagen eventos plaza">
     </div>
     <div align=center>
-      <img aling="center" src="image/construccion2.jpg">
+      <img aling="center" src="images/índice.jpeg">
+    </div>
+    <div align=center>
+      <img aling="center" src="images/construccion2.jpg">
     </div>
 
 
 
     <div align=center>
       <a href="https://www.facebook.com/eventosplazag" target="_blank" class="site-footer__social-networks__label">
-        <img class=" lazyloaded" data-src="" alt="Facebook" src="image/facebook.png">
+        <img class=" lazyloaded" data-src="" alt="Facebook" src="images/facebook.png">
       </a>
       <a href="https://www.instagram.com/eventosplaza2016/" target="_blank" class="site-footer__social-networks__label">
-        <img class=" lazyloaded" data-src="" alt="Instagram" src="image/instagram.png"></a>
+        <img class=" lazyloaded" data-src="" alt="Instagram" src="images/instagram.png"></a>
       </a>
       <a href="https://twitter.com/eventosplazag" target="_blank" class="site-footer__social-networks__label">
-          <img class=" lazyloaded" data-src="" alt="Twitter" src="image/twitter.png">
+          <img class=" lazyloaded" data-src="" alt="Twitter" src="images/twitter.png">
       </a>
     </div>
 
     <div align=center>
       <strong>Teléfono de contacto:</strong>+34 639177061<br>
-      <strong>E-mail:</strong> <a href="mailto:eventosplaza2016@gmail.com">eventosplaza2016@gmail.com</a>
+      <strong>E-mail:</strong> <a href="mailto:eventosplaza2016@gmail.com">eventosplaza2016@gmail.com</a><br>
+      <strong>Dirección:</strong>TRAVESÍA COLOMBIA/CALLE URUGUAY,3 TOLEDO<br>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m0!3m2!1ses-419!2sve!4v1478558334885!6m8!1m7!1sYRJdEx4eUbxmBXoOePuQZg!2m2!1d39.86775418793033!2d-4.032397335465731!3f172.3788070430413!4f-0.30893964574396193!5f0.7820865974627469" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
 
 
