--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     </div>
 
     <div align=center>
-      <strong>Teléfono de contacto:</strong>+34 639177061<br>
-      <strong>E-mail:</strong> <a href="mailto:eventosplaza2016@gmail.com">eventosplaza2016@gmail.com</a><br>
+      <a href="tel:+34639177061"><strong>Teléfono de contacto:</strong> <span>+34 639177061</span></a><br>
+      <a href="mailto:eventosplaza2016@gmail.com"><strong>E-mail:</strong> <span>eventosplaza2016@gmail.com</span></a><br>
       <strong>Dirección:</strong>TRAVESÍA COLOMBIA/CALLE URUGUAY,3 TOLEDO<br>
       <iframe src="https://www.google.com/maps/embed?pb=!1m0!3m2!1ses-419!2sve!4v1478558334885!6m8!1m7!1sYRJdEx4eUbxmBXoOePuQZg!2m2!1d39.86775418793033!2d-4.032397335465731!3f172.3788070430413!4f-0.30893964574396193!5f0.7820865974627469" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
