Inicio de cambio de diseño

--- a/index.html
+++ b/index.html
@@ -1,47 +1,38 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8"/>
-    <title>Eventos Plaza - Tu sueño hecho fiesta.</title>
-  </head>
-  <body>
-    <div>
-    
-    
-    <div align=center>
-    <img src="images/apertura.png" alt="imagen apertura">    
-    <img src="images/eventos_plaza.png" alt="imagen eventos plaza">
-    </div>
-    <div align=center>
-      <img aling="center" src="images/índice.jpeg">
-    </div>
-    <div align=center>
-      <img aling="center" src="images/construccion2.jpg">
-    </div>
+<head>
+  <title>Eventos Plaza - Tu sueño hecho fiesta.</title>
+  <meta charset="utf-8"/>
+  <link rel="stylesheet" type="text/css" href="css/eventosplaza.css">
+</head>
+<body>
+  <section class="portada">
+    <header id="header" class="header"> <!-- header -->
+      <figure>
+        <!-- <img src="images/logo.jpg" alt="Logo Eventos Plaza" width="150" height="150" /> --> <!-- logotipo -->
+      </figure>
+      <nav id="menu" class="menu"> <!-- menu de opciones -->
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">Eventos</a></li>
+          <li><a href="">Contactanos</a></li>
+        </ul>
+      </nav>
+    </header>
+    <section id="portada"> <!-- portada-->
+      imagen
+      titulo
+      boton  (Conoce más)
+    </section>
+  <section>>
+
+  <section id="eventos"><!-- eventos -->
+    imagem
+    titulo
+    descripción
+  </section>
 
 
-
-    <div align=center>
-      <a href="https://www.facebook.com/eventosplazag" target="_blank" class="site-footer__social-networks__label">
-        <img class=" lazyloaded" data-src="" alt="Facebook" src="images/facebook.png">
-      </a>
-      <a href="https://www.instagram.com/eventosplaza2016/" target="_blank" class="site-footer__social-networks__label">
-        <img class=" lazyloaded" data-src="" alt="Instagram" src="images/instagram.png"></a>
-      </a>
-      <a href="https://twitter.com/eventosplazag" target="_blank" class="site-footer__social-networks__label">
-          <img class=" lazyloaded" data-src="" alt="Twitter" src="images/twitter.png">
-      </a>
-    </div>
-
-    <div align=center>
-      <a href="tel:+34639177061"><strong>Teléfono de contacto:</strong> <span>+34 639177061</span></a><br>
-      <a href="mailto:eventosplaza2016@gmail.com"><strong>E-mail:</strong> <span>eventosplaza2016@gmail.com</span></a><br>
-      <strong>Dirección:</strong>TRAVESÍA COLOMBIA/CALLE URUGUAY,3 TOLEDO<br>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m0!3m2!1ses-419!2sve!4v1478558334885!6m8!1m7!1sYRJdEx4eUbxmBXoOePuQZg!2m2!1d39.86775418793033!2d-4.032397335465731!3f172.3788070430413!4f-0.30893964574396193!5f0.7820865974627469" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-    </div>
-
-
-
-
-  </body>
+</body>
 </html>
