Cambios ccs - Portada

--- a/index.html
+++ b/index.html
@@ -4,35 +4,53 @@
 <head>
   <title>Eventos Plaza - Tu sueño hecho fiesta.</title>
   <meta charset="utf-8"/>
+  <link rel="shortcut icon" href="images/logo.ico"> <!-- tienes 16px por 16px y extension icos  -->
   <link rel="stylesheet" type="text/css" href="css/eventosplaza.css">
 </head>
 <body>
-  <section class="portada">
-    <header id="header" class="header"> <!-- header -->
-      <figure>
-        <!-- <img src="images/logo.jpg" alt="Logo Eventos Plaza" width="150" height="150" /> --> <!-- logotipo -->
-      </figure>
-      <nav id="menu" class="menu"> <!-- menu de opciones -->
-        <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">Eventos</a></li>
-          <li><a href="">Contactanos</a></li>
-        </ul>
-      </nav>
-    </header>
-    <section id="portada"> <!-- portada-->
-      imagen
-      titulo
-      boton  (Conoce más)
-    </section>
-  <section>>
-
-  <section id="eventos"><!-- eventos -->
-    imagem
-    titulo
-    descripción
+  <header id="header" class="header"> <!-- header -->
+    <figure class="logotipo"> <!-- logotipo-->
+      <!-- <img src="images/logo.jpg" alt="Logo Eventos Plaza" width="150" height="150" /> --> <!-- logotipo -->
+    </figure>
+    <nav id="menu" class="menu"> <!-- menu de opciones -->
+      <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">Contactanos</a></li>
+      </ul>
+    </nav>
+  </header>
+  <section id="portada" class="portada"> <!-- portada-->
+    <h1 class="titulo">Eventos Plaza.</h1> <!--titulo -->
+    <h3 class="title-a">Tu sueño hecho fiesta</h3> <!-- resumen -->
+    <button>Conoce más</button> <!--boton  (Conoce más)-->
   </section>
-
-
+  <section id="servicios" class="servicios"><!-- evento o servicios-->
+    <h2>Recuerdos y eventos para tu fiesta</h2>  
+    <article class="servicio"> <!-- Evento 1-->
+      imagen
+      <h3  class="title-b">Centros de Mesa</h3> <!--titulo: servicio 1 - Centro de Mesa -->
+      caracteristicas
+    </article>
+    <article class="servicio">
+      imagen
+      <h3  class="title-b">Recuerdos</h3> <!-- titulo: servicio 2 - Sonido -->
+      caracteristicas
+    </article>
+    <article class="servicio">
+      imagen
+      <h3  class="title-b">Sonido</h3> <!--titulo: servicio 3 - Recuerdos -->
+      caracteristicas
+    </article>    
+    <article class="servicio">
+      imagen
+      <h3  class="title-b">Luces</h3> <!--titulo: servicio 3 - Recuerdos -->
+      caracteristicas
+    </article>    
+    <article class="servicio">
+      imagen
+      <h3  class="title-b">Fiesta</h3> <!--titulo: servicio 3 - Recuerdos -->
+      caracteristicas
+    </article>    
+  </section>
 </body>
 </html>
