Cambios de ccs - Incorporación de imagenes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header id="header" class="header"> <!-- header -->
     <figure class="logotipo"> <!-- logotipo-->
-      <!-- <img src="images/logo.jpg" alt="Logo Eventos Plaza" width="150" height="150" /> --> <!-- logotipo -->
+       <img src="images/logo.jpg" alt="Logo Eventos Plaza" width="150" height="150" />  <!-- logotipo -->
     </figure>
     <nav id="menu" class="menu"> <!-- menu de opciones -->
       <ul>
@@ -27,27 +27,27 @@
   <section id="servicios" class="servicios"><!-- evento o servicios-->
     <h2>Recuerdos y eventos para tu fiesta</h2>  
     <article class="servicio"> <!-- Evento 1-->
-      imagen
+      <img src="images/centrodemesa.jpg" alt="Centro de Mesa Primera Comunión" height="200" /> <!-- Imagen de centro de primera comunión-->
       <h3  class="title-b">Centros de Mesa</h3> <!--titulo: servicio 1 - Centro de Mesa -->
       caracteristicas
     </article>
     <article class="servicio">
-      imagen
+      <img src="images/recuerdo.jpg" alt="Imagen de Recuerdos" width="200" /> <!-- Imagen de recuerdos-->
       <h3  class="title-b">Recuerdos</h3> <!-- titulo: servicio 2 - Sonido -->
       caracteristicas
     </article>
     <article class="servicio">
-      imagen
+      <img src="images/sonido.jpg" alt="Imagen de Sonido" width="200" /> <!-- Imagen de sonido -->
       <h3  class="title-b">Sonido</h3> <!--titulo: servicio 3 - Recuerdos -->
       caracteristicas
     </article>    
     <article class="servicio">
-      imagen
+      <img src="images/luces.jpg" alt="Imagen de Luces" width="200" /> <!-- Imagen de Sonido -->
       <h3  class="title-b">Luces</h3> <!--titulo: servicio 3 - Recuerdos -->
       caracteristicas
     </article>    
     <article class="servicio">
-      imagen
+      <img src="images/sonido.jpg" alt="Imagen de Sonido" width="200" />
       <h3  class="title-b">Fiesta</h3> <!--titulo: servicio 3 - Recuerdos -->
       caracteristicas
     </article>    
