Cambios de ccs - Imagenes Floats - overflow - Div para servicios

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="css/eventosplaza.css">
 </head>
 <body>
-  <header id="header" class="header"> <!-- header -->
+  <header id="header" class="header contenedor"> <!-- header -->
     <figure class="logotipo"> <!-- logotipo-->
        <img src="images/logo.jpg" alt="Logo Eventos Plaza" width="150" height="150" />  <!-- logotipo -->
     </figure>
@@ -20,36 +20,68 @@
     </nav>
   </header>
   <section id="portada" class="portada"> <!-- portada-->
-    <h1 class="titulo">Eventos Plaza.</h1> <!--titulo -->
-    <h3 class="title-a">Tu sueño hecho fiesta</h3> <!-- resumen -->
-    <button>Conoce más</button> <!--boton  (Conoce más)-->
+    <div class="contenedor">
+      <h1 class="titulo">Eventos Plaza.</h1> <!--titulo -->
+      <h3 class="title-a">Tu sueño hecho fiesta</h3> <!-- resumen -->
+      <button>Conoce más</button> <!--boton  (Conoce más)-->
+    </div>
   </section>
-  <section id="servicios" class="servicios"><!-- evento o servicios-->
+  <section id="servicios" class="servicios contenedor"><!-- evento o servicios-->
     <h2>Recuerdos y eventos para tu fiesta</h2>  
     <article class="servicio"> <!-- Evento 1-->
-      <img src="images/centrodemesa.jpg" alt="Centro de Mesa Primera Comunión" height="200" /> <!-- Imagen de centro de primera comunión-->
-      <h3  class="title-b">Centros de Mesa</h3> <!--titulo: servicio 1 - Centro de Mesa -->
-      caracteristicas
+      <img class="derecha" src="images/centrodemesa.jpg" alt="Centro de Mesa Primera Comunión" height="350" /> <!-- Imagen de centro de primera comunión-->
+      <div class="contenedor-servicio-derecha"> 
+        <h3  class="title-b">Centros de Mesa</h3> <!--titulo: servicio 1 - Centro de Mesa -->
+        <ol> <!-- caracteristicas -->
+          <li> Artesanales</li>
+          <li> Conmemorativos</li>
+          <li> Representativos</li>
+        </ol>
+      </div>
     </article>
     <article class="servicio">
-      <img src="images/recuerdo.jpg" alt="Imagen de Recuerdos" width="200" /> <!-- Imagen de recuerdos-->
-      <h3  class="title-b">Recuerdos</h3> <!-- titulo: servicio 2 - Sonido -->
-      caracteristicas
+      <img  class="izquierda" src="images/recuerdo.jpg" alt="Imagen de Recuerdos" width="350" /> <!-- Imagen de recuerdos-->
+      <div class="contenedor-servicio-izquierda"> 
+        <h3  class="title-b">Recuerdos</h3> <!-- titulo: servicio 2 - Sonido -->
+        <ol> <!-- caracteristicas -->
+          <li> Artesanales</li>
+          <li> Conmemorativos</li>
+          <li> Representativos</li>
+        </ol>
+      </div>
     </article>
     <article class="servicio">
-      <img src="images/sonido.jpg" alt="Imagen de Sonido" width="200" /> <!-- Imagen de sonido -->
-      <h3  class="title-b">Sonido</h3> <!--titulo: servicio 3 - Recuerdos -->
-      caracteristicas
+      <img class="derecha" src="images/sonido.jpg" alt="Imagen de Sonido" width="350" /> <!-- Imagen de sonido -->
+      <div class="contenedor-servicio-derecha"> 
+        <h3  class="title-b">Sonido</h3> <!--titulo: servicio 3 - Recuerdos -->
+        <ol> <!-- caracteristicas -->
+          <li> Artesanales</li>
+          <li> Conmemorativos</li>
+          <li> Representativos</li>
+        </ol>   
+      </div>
     </article>    
     <article class="servicio">
-      <img src="images/luces.jpg" alt="Imagen de Luces" width="200" /> <!-- Imagen de Sonido -->
-      <h3  class="title-b">Luces</h3> <!--titulo: servicio 3 - Recuerdos -->
-      caracteristicas
+      <img  class="izquierda" src="images/luces.jpg" alt="Imagen de Luces" width="350" /> <!-- Imagen de Sonido -->
+      <div class="contenedor-servicio-izquierda"> 
+        <h3  class="title-b">Luces</h3> <!--titulo: servicio 3 - Recuerdos -->
+        <ol> <!-- caracteristicas -->
+          <li> Artesanales</li>
+          <li> Conmemorativos</li>
+          <li> Representativos</li>
+        </ol>
+      </div>   
     </article>    
     <article class="servicio">
-      <img src="images/sonido.jpg" alt="Imagen de Sonido" width="200" />
-      <h3  class="title-b">Fiesta</h3> <!--titulo: servicio 3 - Recuerdos -->
-      caracteristicas
+      <img  class="derecha" src="images/sonido.jpg" alt="Imagen de Sonido" width="300" />
+      <div class="contenedor-servicio-derecha"> 
+        <h3  class="title-b">Fiesta</h3> <!--titulo: servicio 3 - Recuerdos -->
+        <ol> <!-- caracteristicas -->
+          <li> Artesanales</li>
+          <li> Conmemorativos</li>
+          <li> Representativos</li>
+        </ol>
+      </div>
     </article>    
   </section>
 </body>
