--- a/index.html
+++ b/index.html
@@ -84,5 +84,49 @@
       </div>
     </article>    
   </section>
+  <footer class="footer">
+    <div class="contenedor">
+      <div class="contacto">
+        <img src="images/logo.jpg" alt="Logo eventos plaza"/>
+        <a href="tel:+34639177061"><strong>Teléfono:</strong><span>+34 639177061</span></a>
+        <a href="mailto:eventosplaza2016@gmail.com"><strong>E-mail</strong><span>eventosplaza2016@gmail.com</span></a>
+      </div>
+    </div>
+    <form class="formulario">
+      <label for="nombre">Nombre
+        <input type="text" name="nombre" id="nombre" required />
+      </label>
+      <label for="email">E-mail
+        <input type="email" name="email" id="email" required />
+      </label>
+      <div clas="sexo">
+        <label for="mujer">
+          <input type="radio" name="sexo" id="mujer" value="mujer "/>Mujer
+        </label>
+        <label for="hombre">
+           <input type="radio" name="sexo" id="hombre" value="hombre"/> Hombre
+        </label>
+      </div>
+      <div>
+        <label for="cotizacion">
+          <input type="checkbox" name="intereses" id="cotizacion" value="cotizacion"/>Cotización
+        </label>
+        <label for="reclamo">
+          <input type="checkbox" name="intereses" id="reclamo" value="reclamo"/>Reclamo        
+        </label>
+        <label for="comentario">
+            <input type="checkbox" name="intereses" id="comentario" value="comentario"/>Comentario
+        </label>
+        <label for="otro">
+            <input type="checkbox" name="intereses" id="otro" value="otro"/>Otro
+        </label>
+      </div>
+      <div class="comentarios">
+        <label for="comentarios">Comentarios</label>
+        <textarea cols="30" rows="7" id="comentarios" names="comentarios"></textarea>
+        <input type="submit" name="submit" value="Enviar"/>
+      </div>
+    </form>
+  </footer>
 </body>
 </html>
