Cambios de ccs - portada - footer

--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
   <link rel="stylesheet" type="text/css" href="css/eventosplaza.css">
 </head>
 <body>
-  <header id="header" class="header contenedor"> <!-- header -->
-    <figure class="logotipo"> <!-- logotipo-->
-       <img src="images/logo.jpg" alt="Logo Eventos Plaza" width="150" height="150" />  <!-- logotipo -->
-    </figure>
-    <nav id="menu" class="menu"> <!-- menu de opciones -->
-      <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">Contactanos</a></li>
-      </ul>
-    </nav>
-  </header>
   <section id="portada" class="portada"> <!-- portada-->
+    <header id="header" class="header contenedor"> <!-- header -->
+      <figure class="logotipo"> <!-- logotipo-->
+         <img src="images/logo.jpg" alt="Logo Eventos Plaza" width="150" height="150" />  <!-- logotipo -->
+      </figure>
+      <nav id="menu" class="menu"> <!-- menu de opciones -->
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">Contactanos</a></li>
+        </ul>
+      </nav>
+    </header>
     <div class="contenedor">
       <h1 class="titulo">Eventos Plaza.</h1> <!--titulo -->
       <h3 class="title-a">Tu sueño hecho fiesta</h3> <!-- resumen -->
-      <button class="button">Conoce más</button> <!--boton  (Conoce más)-->
+      <a href="index.html#servicios" class="button">Conoce más</a> <!--boton  (Conoce más)-->
     </div>
   </section>
   <section id="servicios" class="servicios contenedor"><!-- evento o servicios-->
