Inclusión de slide show para una breve introducción de la empresa.

--- a/index.html
+++ b/index.html
@@ -3,45 +3,115 @@
   <head>
     <meta charset="utf-8"/>
     <title>Eventos Plaza - Tu sueño hecho fiesta.</title>
+    <!-- etiqueta meta datos viewport, nos ayuda a mostrar correctamente nuestro contenido según el área visible del usuario. -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes"/>
+    <link rel="stylesheet" href="css/estilos.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
   </head>
   <body>
-    <div>
-    
-    
-    <div align=center>
-    <img src="images/apertura.png" alt="imagen apertura">    
-    <img src="images/eventos_plaza.png" alt="imagen eventos plaza">
-    </div>
-    <div align=center>
-      <img aling="center" src="images/índice.jpeg">
-    </div>
-    <div align=center>
-      <img aling="center" src="images/construccion2.jpg">
-    </div>
+    <header class="header">
+      <nav class="menu">
+        <ul>
+          <li>
+            <a href="index.html">
+              <img src="images/logo_eventos_plaza.jpeg" alt="logo_eventos_plaza" height="60">
+              <span>Inicio</span>
+            </a>
+          </li>
+          <li>
+            <a href="fiesta_tematica.html">
+              <img src="images/fiesta_tematica.png" alt="imagen fiestas temáticas" height="60">
+              <span>Fiestas</span> <span>Temáticas</span>
+            </a>
+          </li>          
 
+          <li>
+            <a href="comuniones.html">
+              <img src="images/comunion.png" alt="imagen Comuniones" height="60">
+              <span>Comuniones</span>
+            </a>
+          </li>
 
+          <li>
+            <a href="bodas.html">
+              <img src="images/boda.png" alt="imagen bodas" height="60">
+              <span>Bodas</span>
+            </a>
+          </li>          
 
-    <div align=center>
-      <a href="https://www.facebook.com/eventosplazag" target="_blank" class="site-footer__social-networks__label">
-        <img class=" lazyloaded" data-src="" alt="Facebook" src="images/facebook.png">
-      </a>
-      <a href="https://www.instagram.com/eventosplaza2016/" target="_blank" class="site-footer__social-networks__label">
-        <img class=" lazyloaded" data-src="" alt="Instagram" src="images/instagram.png"></a>
-      </a>
-      <a href="https://twitter.com/eventosplazag" target="_blank" class="site-footer__social-networks__label">
-          <img class=" lazyloaded" data-src="" alt="Twitter" src="images/twitter.png">
-      </a>
-    </div>
+          <li>
+            <a href="nacimientos.html">
+              <img src="images/nacimiento.png" alt="imagen nacimientos" height="60">
+              <span>Nacimientos</span>
+            </a>
+          </li>          
 
-    <div align=center>
-      <a href="tel:+34639177061"><strong>Teléfono de contacto:</strong> <span>+34 639177061</span></a><br>
-      <a href="mailto:eventosplaza2016@gmail.com"><strong>E-mail:</strong> <span>eventosplaza2016@gmail.com</span></a><br>
-      <strong>Dirección:</strong>TRAVESÍA COLOMBIA/CALLE URUGUAY,3 TOLEDO<br>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m0!3m2!1ses-419!2sve!4v1478558334885!6m8!1m7!1sYRJdEx4eUbxmBXoOePuQZg!2m2!1d39.86775418793033!2d-4.032397335465731!3f172.3788070430413!4f-0.30893964574396193!5f0.7820865974627469" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-    </div>
+          <li>
+            <a href="BarDulce.html">
+              <img src="images/BarDulce.png" alt="imagen del bar de dulces" height="60">
+              <span>Bar de dulces</span>
+            </a>
+          </li>
 
+          <li>
+            <a href="sonido.html">
+              <img src="images/sonido.png" alt="imagen sonido" height="60">
+              <span>Sonido</span>
+            </a>
+          </li>
 
+          <li>
+            <a href="escribenos.html">
+              <img src="images/contactanos.png" alt="imagen escríbenos" height="60">
+              <span>Escríbenos</span>
+            </a>
+          </li>
 
+        </ul>
+      </nav>
+    </header>
+    <!-- Introducción a Eventos plaza-->
+    <section>
+      <div class="presentacion" id="slideshow">
+        <figure class="carousel">
+          <a href="#"><img src="images/logo_eventos_plaza.png" alt="Logo Eventos Plaza" height="300"></a> 
+          <figcaption>Evenos Plaza</figcaption>
+        </figure><!-- La compañia-->
+        <figure class="carousel">
+          <a href="fiesta_tematica.html"><img src="images/carousel-ft.jpg" alt="Foto recuedo fiesta temática" height="300"></a> <!-- Fiestas temáticas-->
+          <figcaption>Fiestas temáticas</figcaption>
+        </figure>
+        <figure class="carousel">
+          <a href="comuniones.html"><img src="images/carousel_c.jpg" alt="Foto recuerdo comunión" height="300"></a><!-- Comuniones -->
+          <figcaption>Comuniones</figcaption>
+        </figure>
+        <figure class="carousel">
+          <a href="bodas.html"><img src="images/carousel-b.jpg" alt="Foto recuerdo boda" height="300"></a> <!--  Bodas -->
+          <figcaption>Bodas</figcaption>
+        </figure>
+        <figure class="carousel">
+          <a href="nacimientos.html"><img src="images/carousel-n.jpg" alt="Foto recuerdo nacimiento" height="300"></a> <!-- Nacimientos-->
+          <figcaption>Nacimientos</figcaption>
+        </figure>
+        <figure class="carousel">
+          <a href="BarDulce.html"><img src="images/carousel_bd.jpg" alt="Foto bar de los dulces" height="300"></a> <!-- Sonido-->
+          <figcaption>Bar de Dulces</figcaption>
+        </figure>
+        <figure class="carousel">
+          <a href="sonido.html"><img src="images/carousel_s.jpg" alt="Foto recuerdo sonido" height="300"></a> <!-- Sonido-->
+          <figcaption>Sonido</figcaption>
+        </figure>        
+      </div>
+    </section>
+
+    <footer class="footer">
+       <h2>footer</h2>
+       <h2>footer</h2>
+       <h2>footer</h2> 
+    </footer>
+
+    <script type="text/javascript" src="js/slideshow.js"></script> 
 
   </body>
 </html>
