cambios de logo de ya abrimos por apertura

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     
     <div align=center>
-    <img src="images/apertura.png" alt="imagen apertura">    
+    <img src="images/abrimos.png" alt="imagen apertura" width="300">    
     <img src="images/eventos_plaza.png" alt="imagen eventos plaza">
     </div>
     <div align=center>
