Inclusion de ico, imagenes en el cuerpo y footer

--- a/fiesta_tematica.html
+++ b/fiesta_tematica.html
@@ -6,10 +6,9 @@
     <!-- etiqueta meta datos viewport, nos ayuda a mostrar correctamente nuestro contenido según el área visible del usuario. -->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes"/>
     <link rel="stylesheet" href="css/estilos.css"/>
-    <link rel="shortcut icon" href="images/logo_eventos_plaza2.ico">
-     <link rel="icon" href="images/logo_eventos_plaza2.png" type="image/png" sizes="16x16"> 
+    <link rel="shortcut icon" href="images/logo_eventos_plaza2.ico"/>
   </head>
-  <body onload="sliderTimer()">
+  <body">
     <header class="header">
       <nav class="menu">
         <ul>
@@ -73,68 +72,60 @@
     </header>
     <!-- Introducción a Eventos plaza-->
     <section>
+      pequeña deccion de fiestas tematicas
 
-      <div class="presentacion">
-        <img id="slider" src="images/logo_eventos_plaza2.png" height="400">
-        <div class="icon" id="left"><i class="icon icon-circle-left" onclick="prev()"></i>
-			<img class="imagen-izquierda" src="images/globo.png" alt="imagen globo" width="150">
-        </div>
-       <div class="icon" id="right"><i class="icon icon-circle-right" onclick="next()"></i>
-			<img class="imagen-derecha" src="images/serpentina2.png" alt="imagen globo" width="150">
-       </div>
-      </div>
-        <h2 id="sliderHeader">Eventos Plaza</h2>
-        <p id="sliderPara">Haz de tu fiesta un evento inolvidable!</p>
+      los articulos
 
+    
     </section>
 
     <footer class="header">
        <nav class="menu fotter">
-       	<ul>
-       		<li>
-       			<a href="fiesta_tematica.html">
-       				 <span>Fiestas</span> <span>Temáticas</span>
-       				<img src="images/flores_izq.png" alt="imagen flores izquirda" height="80">
-       			</a>
-       		</li>       		
-       		<li>
-       			<a href="BarDulce.html">
-       				<span>Bar de Dulces</span>	
-       				<img src="images/torta-mesa.png" alt="imagen torta flores" height="80">
-       			</a>
-       		</li>       		
-       		<li>
-       			<a href="fiesta_tematica.html">
-       				 <span>Fiestas</span> <span>Temáticas</span>
-       				<img src="images/carretilla_flores.png" alt="imagen carretilla de flores" height="80">
-       			</a>
-       		</li>
-       		<li>
-       			<a href="bodas.html">
-       				<span>Bodas</span>	
-       				<img src="images/boda_munecos.png" alt="imagen boda" height="80">
-       			</a>
-       		</li>
-       		<li>
-       			<a href="fiesta_tematica.html">
-       				<span>Ponquet</span>	
-       				<img src="images/ponquet.png" alt="imagen ponquet" height="80">
-       			</a>
-       		</li>
-       		<li>
-       			<a href="fiesta_tematica.html">
-       				<span>Cocteles</span>	
-       				<img src="images/coctel.png" alt="imagen coctel" height="80">
-       			</a>
-       		</li>
-       		<li>
-       			<a href="fiesta_tematica.html">
-       				 <span>Fiestas</span> <span>Temáticas</span>
-       				<img src="images/flores_der.png" alt="imagen flores" height="80">
-       			</a>
-       		</li>
+        <ul>
+          <li>
+            <a href="fiesta_tematica.html">
+               <span>Fiestas</span> <span>Temáticas</span>
+              <img src="images/flores_izq.png" alt="imagen flores izquirda" height="80">
+            </a>
+          </li>           
+          <li>
+            <a href="BarDulce.html">
+              <span>Bar de Dulces</span>  
+              <img src="images/torta-mesa.png" alt="imagen torta flores" height="80">
+            </a>
+          </li>           
+          <li>
+            <a href="fiesta_tematica.html">
+               <span>Fiestas</span> <span>Temáticas</span>
+              <img src="images/carretilla_flores.png" alt="imagen carretilla de flores" height="80">
+            </a>
+          </li>
+          <li>
+            <a href="bodas.html">
+              <span>Bodas</span>  
+              <img src="images/boda_munecos.png" alt="imagen boda" height="80">
+            </a>
+          </li>
+          <li>
+            <a href="fiesta_tematica.html">
+              <span>Ponquet</span>  
+              <img src="images/ponquet.png" alt="imagen ponquet" height="80">
+            </a>
+          </li>
+          <li>
+            <a href="fiesta_tematica.html">
+              <span>Cocteles</span> 
+              <img src="images/coctel.png" alt="imagen coctel" height="80">
+            </a>
+          </li>
+          <li>
+            <a href="fiesta_tematica.html">
+               <span>Fiestas</span> <span>Temáticas</span>
+              <img src="images/flores_der.png" alt="imagen flores" height="80">
+            </a>
+          </li>
 
-       	</ul>
+        </ul>
        </nav>
     </footer>
 
